manifests/dev/pihole/Deployment-pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.38.0
    heritage: Helm
    release: pihole
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pihole
      release: pihole
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum.config.adlists: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.blacklist: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.dnsmasqConfig: 3eb9df23500f1c57ddbbd4799415e9507cc6dd86e8a019024132d9e0d6bac37
        checksum.config.regex: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.staticDhcpConfig: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.whitelist: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
      labels:
        app: pihole
        app.kubernetes.io/name: pihole
        release: pihole
    spec:
      containers:
        - env:
            - name: FTLCONF_webserver_port
              value: "80"
            - name: VIRTUAL_HOST
              value: pihole.home.kronkltd.net
            - name: FTLCONF_misc_etc_dnsmasq_d
              value: "true"
            - name: FTLCONF_webserver_api_password
              valueFrom:
                secretKeyRef:
                  key: password
                  name: admin-password
            - name: FTLCONF_dns_listeningMode
              value: all
            - name: TZ
              value: America/Detroit
            - name: FTLCONF_dns_upstreams
              value: 1.1.1.1;1.0.0.1
          image: pihole/pihole:2026.07.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /admin
              port: http
              scheme: HTTP
            initialDelaySeconds: 90
            timeoutSeconds: 5
          name: pihole
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 53
              name: dns
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 67
              name: client-udp
              protocol: UDP
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /admin
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            capabilities:
              add:
                - SYS_TIME
                - SYS_NICE
            privileged: false
          volumeMounts:
            - mountPath: /etc/pihole
              name: config
            - mountPath: /etc/dnsmasq.d/02-custom.conf
              name: custom-dnsmasq
              subPath: 02-custom.conf
            - mountPath: /etc/addn-hosts
              name: custom-dnsmasq
              subPath: addn-hosts
      dnsConfig:
        nameservers:
          - 127.0.0.1
          - 8.8.8.8
      dnsPolicy: None
      hostNetwork: false
      nodeSelector:
        kubernetes.io/hostname: nasnix
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pihole
        - configMap:
            defaultMode: 420
            name: pihole-custom-dnsmasq
          name: custom-dnsmasq
