manifests/dev/pihole/Pod-pihole-smoke-test.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
  name: pihole-smoke-test
  namespace: pihole
spec:
  containers:
    - command:
        - sh
        - -c
        - curl http://pihole-web:80/
      image: curlimages/curl
      imagePullPolicy: IfNotPresent
      name: hook1-container
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
