manifests/dev/pihole/Service-pihole-dns-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.34.0
    heritage: Helm
    release: pihole
  name: pihole-dns-tcp
  namespace: pihole
spec:
  externalTrafficPolicy: Local
  ports:
    - name: dns
      port: 53
      protocol: TCP
      targetPort: dns
  selector:
    app: pihole
    release: pihole
  type: NodePort
