manifests/dev/pihole/Service-pihole-dns.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.38.0
    heritage: Helm
    release: pihole
  name: pihole-dns
  namespace: pihole
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.0.243
  ports:
    - name: dns
      port: 53
      protocol: TCP
      targetPort: dns
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
