manifests/dev/pihole/Service-pihole-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: pihole
    app.kubernetes.io/instance: pihole
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pihole
    helm.sh/chart: pihole-0.2.0
  name: pihole-tcp
  namespace: pihole
spec:
  ports:
    - name: dns
      port: 53
      protocol: TCP
    - name: http
      port: 80
      protocol: TCP
  selector:
    app.kubernetes.io/component: pihole
    app.kubernetes.io/instance: pihole
    app.kubernetes.io/name: pihole
  sessionAffinity: None
  type: ClusterIP
