manifests/dev/pihole/Service-pihole-udp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: pihole
    app.kubernetes.io/instance: pihole
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pihole
    helm.sh/chart: pihole-0.2.0
  name: pihole-udp
  namespace: pihole
spec:
  ports:
    - name: dns
      port: 53
      protocol: UDP
  selector:
    app.kubernetes.io/component: pihole
    app.kubernetes.io/instance: pihole
    app.kubernetes.io/name: pihole
  sessionAffinity: None
  type: ClusterIP
