manifests/dev/pihole/Ingress-pihole-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: pihole-local
  namespace: pihole
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: pihole-web
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - pihole.home.kronkltd.net
      secretName: pihole-local-tls
