manifests/dev/pihole/Ingress-pihole.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: pihole
    chart: pihole-2.38.0
    heritage: Helm
    release: pihole
  name: pihole
  namespace: pihole
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: pihole-web
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - pihole.home.kronkltd.net
      secretName: pihole-tls
